--- a/_main.cfg
+++ b/_main.cfg
@@ -33,7 +33,7 @@
 [/campaign]
 #enddef
 
-	{VOAS_LOADING_CAMPAIGN I ("Chapter I:  Death in Exile") ("VoaSI") (01_blood_of_a_vampire)}
+	{VOAS_LOADING_CAMPAIGN I ("Chapter I:  Death in Exile") ("VoaSI") (01_on_the_road)}
 	
 [campaign]
 	id=Vision_of_a_Shaman_II
