Added SZ 3 & 4 CFG Files

--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -73,6 +73,7 @@
 #enddef
 
 # V A M P I R E S
+
 #define CHARACTER_AGARWAEN_KNAVE
     type=Vamp Knave
     id=Agarwaen
@@ -321,6 +322,19 @@
     unrenamable=yes
 #enddef
 
+#define CHARACTER_GIDEON_GENERAL
+    type=General
+    gender=male
+    id=Gideon
+    name= _ "Gideon"
+    canrecruit=yes
+    unrenamable=yes
+    [modifications]
+        {TRAIT_STRONG}
+        {TRAIT_RESILIENT}
+    [/modifications]
+#enddef
+
 #define CHARACTER_GIDEON
     type=Grand Marshal
     gender=male
@@ -328,6 +342,10 @@
     name= _ "Gideon"
     canrecruit=yes
     unrenamable=yes
+    [modifications]
+        {TRAIT_STRONG}
+        {TRAIT_RESILIENT}
+    [/modifications]
 #enddef
 
 #define CHARACTER_FRED
@@ -344,6 +362,15 @@
     gender=male
     id=George
     name= _ "George"
+    canrecruit=yes
+    unrenamable=yes
+#enddef
+
+#define CHARACTER_KARL
+    type=Swordsman
+    gender=male
+    id=Karl
+    name= _ "Karl"
     canrecruit=yes
     unrenamable=yes
 #enddef
