Fixed some issues with old IDs (Vilkish ... ) and removed chapter 1 for update release + a few  minor fixes

--- a/_main.cfg
+++ b/_main.cfg
@@ -33,7 +33,7 @@
 [/campaign]
 #enddef
 
-	{VOAS_LOADING_CAMPAIGN I ("Chapter I:  Death in Exile") ("VoaSI") (01_on_the_road)}
+	#{VOAS_LOADING_CAMPAIGN I ("Chapter I:  Death in Exile") ("VoaSI") (01_on_the_road)}
 	
 [campaign]
 	id=Vision_of_a_Shaman_II
@@ -54,10 +54,6 @@
 
 	first_scenario=01_strangers
 [/campaign]
-	
-	#{VOAS_LOADING_CAMPAIGN III ("Chapter III: Inquisition") ("VoaSIII") (01_blood_of_a_vampire)}
-	#{VOAS_LOADING_CAMPAIGN IV ("Chapter IV: The Foil") ("VoaSIV") (01_blood_of_a_vampire)}
-	#{VOAS_LOADING_CAMPAIGN V ("Chapter V: Darkest Hour") ("VoaSV") (01_blood_of_a_vampire)}
 	
 #define VOAS_MAIN_LOADING_STUFF
 	[binary_path]
