--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -1,13 +1,13 @@
 #textdomain wesnoth-Vision_of_a_Shaman
 
-# define VOAS_I_LASTBREATH
+#define VOAS_I_LAST_BREATHS
 	# Agarwaen dies
 	{LAST_BREATH_VARIATION2 Agarwaen 
   		Agarwaen ( _ "That cannot be! It cannot! No! Noooo! ...") 
   		Agarwaen ( _ "That is not possible ... I have been ... defeated.")}
 #enddef
 
-#define VOAS_LAST_BREATHS
+#define VOAS_II_LAST_BREATHS
 	# Hennak dies
   	{LAST_BREATH_VARIATION2 Hennak 
   		Hennak ( _ "At least… I die in a fight.") 
