--- a/utils/utils.cfg
+++ b/utils/utils.cfg
@@ -14,12 +14,12 @@
 #enddef
 
 #define LAST_BREATH_VARIATION2 ID SPEAKER_1 STRING_1 SPEAKER_2 STRING_2
-#
-#   Here is an example:
-#!  {LAST_BREATH_VARIATION3 id=Gweod 
-#!      Gweod (_"War es... nicht scharf genug?..")
-#!      Gweod (_"Aber...mein Schwert...")}
-#!      # END OF LAST_BREATH_VARIATION3
+    #
+    #   Here is an example:
+    #!  {LAST_BREATH_VARIATION2 Gweod 
+    #!      Gweod (_"War es... nicht scharf genug?..")
+    #!      Gweod (_"Aber...mein Schwert...")}
+    #!      # END OF LAST_BREATH_VARIATION2
 
     [event]
         name=last breath
