added chapter one files to branch, added Silwaen in the first scenario + last breath events for him. Others remain the same, though.

--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -87,6 +87,19 @@
     [/modifications]
 #enddef
 
+#define CHARACTER_SILWAEN_FULLBLOOD
+    type=Vamp Fullblood
+    id=Silwaen
+    gender=male
+    name= _ "Silwaen"
+    canrecruit=yes
+    unrenamable=yes
+    [modifications]
+        {TRAIT_VAMPIRE}
+        {TRAIT_STRONG}
+    [/modifications]
+#enddef
+
 # D W A R V E S
 
 #define CHARACTER_MORDIN
