--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -3,8 +3,13 @@
 #define VOAS_I_LAST_BREATHS
 	# Agarwaen dies
 	{LAST_BREATH_VARIATION2 Agarwaen 
-  		Agarwaen ( _ "That cannot be! It cannot! No! Noooo! ...") 
+  		Silwaen ( _ "Not my Brother! No!") 
   		Agarwaen ( _ "That is not possible ... I have been ... defeated.")}
+
+	# Agarwaen dies
+	{LAST_BREATH_VARIATION2 Silwaen 
+  		Agarwaen ( _ "... Brother!") 
+  		Silwaen ( _ "Urgh ... damned! ...")}
 #enddef
 
 #define VOAS_II_LAST_BREATHS
