Map for Proloque

--- a/utils/utils.cfg
+++ b/utils/utils.cfg
@@ -17,8 +17,8 @@
     #
     #   Here is an example:
     #!  {LAST_BREATH_VARIATION2 Gweod 
-    #!      Gweod (_"War es... nicht scharf genug?..")
-    #!      Gweod (_"Aber...mein Schwert...")}
+    #!      Gweod (_"Was it not sharp enough?...")
+    #!      Gweod (_"But... my sword...")}
     #!      # END OF LAST_BREATH_VARIATION2
 
     [event]
