First attempt to make the campaign playable in multiplayer. Scenario 1 is already playable in both Multi- and Singleplayer

--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -1,4 +1,30 @@
-#textdomain wesnoth-Vision_of_a_Shaman
+#textdomain wesnoth-voas
+
+#define PLAYER_TEAM
+    team_name=player
+    user_team_name= _ "Player"
+#enddef
+    
+#define ENEMY_TEAM
+    team_name=enemy
+    user_team_name= _ "Enemy"
+#enddef
+
+#define PLAYABLE
+    unrenamable=yes
+    controller=human
+    canrecruit=yes
+    {PLAYER_TEAM}
+    persistent=yes
+    allow_player=yes
+#ifdef MULTIPLAYER
+    team_lock=yes
+    gold_lock=yes
+    income_lock=yes
+    faction=Custom
+    share_view=yes
+#endif
+#enddef
 
 # T H E L I E R
 
@@ -9,9 +35,11 @@
     name= _ "Hennak"
     canrecruit=yes
     unrenamable=yes
+    placement=map,leader
     [modifications]
         {TRAIT_STRONG}
         {TRAIT_RESILIENT}
+        {TRAIT_LOYAL}
     [/modifications]
 #enddef
 
@@ -21,10 +49,10 @@
     gender=female
     name= _ "Luna"
     unrenamable=yes
-    upkeep=loyal
     [modifications]
         {TRAIT_FERAL_MUSTHAVE}
         {TRAIT_STRONG}
+        {TRAIT_LOYAL}
     [/modifications]
 	{IS_LOYAL}
 #enddef
@@ -35,10 +63,11 @@
 	id=Mahun
 	name= _ "Mahun"
 	unrenamable=yes
-	upkeep=loyal
+    placement=map,leader
 	[modifications]
         {TRAIT_INTELLIGENT}
         {TRAIT_RESILIENT}
+        {TRAIT_LOYAL}
     [/modifications]
 	{IS_HERO}
 #enddef
@@ -49,10 +78,11 @@
     id=Aela
     name= _ "Aela"
     unrenamable=yes
-    upkeep=loyal
+    placement=map,leader
     [modifications]
         {TRAIT_RESILIENT}
         {TRAIT_QUICK}
+        {TRAIT_LOYAL}
     [/modifications]
     {IS_HERO}
 #enddef
@@ -64,10 +94,10 @@
     name= _ "Hawk"
     canrecruit=no
     unrenamable=yes
-    upkeep=loyal
     [modifications]
         {TRAIT_DEXTROUS}
         {TRAIT_RESILIENT}
+        {TRAIT_LOYAL}
     [/modifications]
     {IS_LOYAL}
 #enddef
@@ -84,6 +114,7 @@
     [modifications]
         {TRAIT_VAMPIRE}
         {TRAIT_INTELLIGENT}
+        {TRAIT_LOYAL}
     [/modifications]
 #enddef
 
@@ -97,6 +128,7 @@
     [modifications]
         {TRAIT_VAMPIRE}
         {TRAIT_STRONG}
+        {TRAIT_LOYAL}
     [/modifications]
 #enddef
 
@@ -121,10 +153,10 @@
     id=Dorin
     name= _ "Dorin"
     unrenamable=yes
-    upkeep=loyal
     [modifications]
         {TRAIT_STRONG}
         {TRAIT_RESILIENT}
+        {TRAIT_LOYAL}
     [/modifications]
     {IS_HERO}
 #enddef
@@ -192,8 +224,6 @@
     name= _ "Torok"
     canrecruit=no
     unrenamable=yes
-    upkeep=loyal
-    {IS_LOYAL}
 #enddef
 
 #define CHARACTER_GRAUGH
@@ -203,8 +233,6 @@
     name= _ "Graugh"
     canrecruit=no
     unrenamable=yes
-    upkeep=loyal
-    {IS_LOYAL}
 #enddef
 
 #define CHARACTER_TAZGOSH
