--- a/utils/utils.cfg
+++ b/utils/utils.cfg
@@ -1,4 +1,46 @@
-#textdomain wesnoth-Vision_of_a_Shaman
+#textdomain wesnoth-voas
+
+#ifdef MULTIPLAYER
+#define MP_SIDE NUM WML
+    [side]
+        side={NUM}
+        {WML}
+    [/side]
+#enddef
+#else
+#define MP_SIDE NUM WML
+    [side]
+        side={NUM}
+        hidden=yes
+        controller=null
+        allow_player=no
+        no_leader=yes
+    [/side]
+#enddef
+#endif
+
+#define RECALL_LOYALS
+    [store_unit]
+        variable=loyals
+        [filter]
+            {FILTER_LOYALS}
+            [not]
+                canrecruit=yes
+            [/not]
+            x,y=recall,recall
+        [/filter]
+    [/store_unit]
+
+    [foreach]
+        array=loyals
+        [do]
+            [recall]
+                id=$this_item.id
+            [/recall]
+        [/do]
+    [/foreach]
+    {CLEAR_VARIABLE loyals}
+#enddef
 
 #define RECALLABLE_UNIT SIDE TYPE
     # Creates a generic unit of TYPE belonging to SIDE, which has a
@@ -13,10 +55,10 @@
     [/unit]
 #enddef
 
-#define LAST_BREATH_VARIATION2 ID SPEAKER_1 STRING_1 SPEAKER_2 STRING_2
+#define LAST_BREATH_VARIATION2 ID DEFEAT SPEAKER_1 STRING_1 SPEAKER_2 STRING_2
     #
     #   Here is an example:
-    #!  {LAST_BREATH_VARIATION2 Gweod 
+    #!  {LAST_BREATH_VARIATION2 Gweod false 
     #!      Gweod (_"Was it not sharp enough?...")
     #!      Gweod (_"But... my sword...")}
     #!      # END OF LAST_BREATH_VARIATION2
@@ -32,6 +74,11 @@
         [set_variable]
             name=last_breath_string
             rand=1,2
+        [/set_variable]
+
+        [set_variable]
+            name=is_hero
+            value={DEFEAT}
         [/set_variable]
         
         # FIRST STRING
@@ -62,6 +109,20 @@
             [/then]
         [/if]
         
+        # DEFEAT
+        [if]
+            [variable]
+                name=is_hero
+                boolean_equals=true
+            [/variable]
+            [then]
+                [endlevel]
+                    result=defeat
+                [/endlevel]
+            [/then]
+        [/if]
+
+        {CLEAR_VARIABLE is_hero}
         {CLEAR_VARIABLE last_breath_string}
     [/event]
 #enddef
