--- a/_main.cfg
+++ b/_main.cfg
@@ -1,7 +1,7 @@
-#textdomain wesnoth-Vision_of_a_Shaman
+#textdomain wesnoth-voas
 
 [textdomain]
-    name="wesnoth-Vision_of_a_Shaman"
+    name="wesnoth"
     path="data/add-ons/Vision_of_a_Shaman/translations"
 [/textdomain]
 
@@ -13,15 +13,40 @@
 	code = << wesnoth.dofile("~add-ons/Vision_of_a_Shaman/lua.lua") >>
 [/lua]
 
-#define VOAS_LOADING_CAMPAIGN CHAPTER CHAPTER_STRING ABBREV FIRST_SCENARIO
+#define VOAS_ABOUT
+[about]
+        title= _ "Creator and Lead Designer"
+        [entry]
+            name= _ "Aaron Winter (Bitron)"
+            email="aaron.winter@yahoo.de"
+            comment="Main designer, current maintainer."
+        [/entry]
+    [/about]
+    [about]
+        title= _ "Co-Creator and Master of Words"
+        [entry]
+            name="Alexander Zurek (Alresu)"
+            comment="Storyline assistance and dialoques."
+        [/entry]
+    [/about]
+#enddef
+
 [campaign]
-	id=Vision_of_a_Shaman_{CHAPTER}
-	define=CAMPAIGN_VISION_OF_A_SHAMAN_{CHAPTER}
-	name= _ "Vision of a Shaman"+ "
-" + _ {CHAPTER_STRING}
-	abbrev= _ {ABBREV}
+	id=Vision_of_a_Shaman
+	define=CAMPAIGN_VISION_OF_A_SHAMAN
+
+	type=hybrid
+
+	min_players=2
+	max_players=2
+
+	allow_era_choice=no
+
 	icon="items/book1.png"
 	image="data/add-ons/Vision_of_a_Shaman/images/portraits/orcish_shaman.png"
+	
+	abbrev= _ "VoaS"
+	name= _ "Vision of a Shaman"
 	description= _ "Work in process. Starting this campaign will start VoaS: Chapter II until this Chapter is done."
 	
 	difficulties=EASY,NORMAL,HARD
@@ -29,33 +54,11 @@
     ";*" + {MENU_IMG_TXT2 "items/burial.png" (_"Challenging") _"(normal)"} +
     ";" + {MENU_IMG_TXT2 "items/bonestack.png" (_"Nightmare") _"(hard)"}
 
-	first_scenario={FIRST_SCENARIO}
+	first_scenario=00_proloque
+	{VOAS_ABOUT}
 [/campaign]
-#enddef
 
-	{VOAS_LOADING_CAMPAIGN I ("Chapter I:  Death in Exile") ("VoaSI") (01_on_the_road)}
-	
-[campaign]
-	id=Vision_of_a_Shaman_II
-	define=CAMPAIGN_VISION_OF_A_SHAMAN_II
-	name= _ "Vision of a Shaman"+ "
-" +_"Chapter II: A Thelian Tale"
-	abbrev= _ "VoaSII"
-	icon="items/book1.png"
-	image="data/add-ons/Vision_of_a_Shaman/images/portraits/orcish_shaman.png"
-	description= _ "This campaign tells the story of how the Thelians made their first steps outside their usual territory and how they met their first allies.
-
-(Novice level, 8 scenarios.)"
-	
-	difficulties=EASY,NORMAL,HARD
-	difficulty_descriptions={MENU_IMG_TXT2 "items/bones.png" (_"Story") _"(easy)"} +
-    ";*" + {MENU_IMG_TXT2 "items/burial.png" (_"Challenging") _"(normal)"} +
-    ";" + {MENU_IMG_TXT2 "items/bonestack.png" (_"Nightmare") _"(hard)"}
-
-	first_scenario=01_strangers
-[/campaign]
-	
-#define VOAS_MAIN_LOADING_STUFF
+#ifdef CAMPAIGN_VISION_OF_A_SHAMAN
 	[binary_path]
     	path="data/add-ons/Millenium_Era"
 	[/binary_path]
@@ -73,29 +76,10 @@
 		{~add-ons/Millenium_Era/units}
     	{~add-ons/Millenium_Era/units/wolves}
 	[/units]
-#enddef
 
-#ifdef CAMPAIGN_VISION_OF_A_SHAMAN_I
-	{VOAS_MAIN_LOADING_STUFF}
 	{~add-ons/Vision_of_a_Shaman/scenarios/chapter_01}
-#endif
-
-#ifdef CAMPAIGN_VISION_OF_A_SHAMAN_II
-	{VOAS_MAIN_LOADING_STUFF}
 	{~add-ons/Vision_of_a_Shaman/scenarios/chapter_02}
-#endif
-
-#ifdef CAMPAIGN_VISION_OF_A_SHAMAN_III
-	{VOAS_MAIN_LOADING_STUFF}
 	{~add-ons/Vision_of_a_Shaman/scenarios/chapter_03}
-#endif
-
-#ifdef CAMPAIGN_VISION_OF_A_SHAMAN_IV
-	{VOAS_MAIN_LOADING_STUFF}
 	{~add-ons/Vision_of_a_Shaman/scenarios/chapter_04}
-#endif
-
-#ifdef CAMPAIGN_VISION_OF_A_SHAMAN_V
-	{VOAS_MAIN_LOADING_STUFF}
 	{~add-ons/Vision_of_a_Shaman/scenarios/chapter_05}
 #endif
