--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -1,35 +1,35 @@
-#textdomain wesnoth-Vision_of_a_Shaman
+#textdomain wesnoth-voas
 
 #define VOAS_I_LAST_BREATHS
 	# Agarwaen dies
-	{LAST_BREATH_VARIATION2 Agarwaen 
+	{LAST_BREATH_VARIATION2 Agarwaen true 
   		Silwaen ( _ "Not my Brother! No!") 
   		Agarwaen ( _ "That is not possible ... I have been ... defeated.")}
 
 	# Agarwaen dies
-	{LAST_BREATH_VARIATION2 Silwaen 
+	{LAST_BREATH_VARIATION2 Silwaen true 
   		Agarwaen ( _ "... Brother!") 
   		Silwaen ( _ "Urgh ... damned! ...")}
 #enddef
 
 #define VOAS_II_LAST_BREATHS
 	# Hennak dies
-  	{LAST_BREATH_VARIATION2 Hennak 
+  	{LAST_BREATH_VARIATION2 Hennak true 
   		Hennak ( _ "At least… I die in a fight.") 
   		Hennak ( _ "Ouch. The end of my life has been reached.")}
   	
   	# Mahun dies
-  	{LAST_BREATH_VARIATION2 Mahun 
+  	{LAST_BREATH_VARIATION2 Mahun true 
   		Mahun ( _ "I will greet… our ancestrals.") 
   		Mahun ( _ "My time has come.")}
   	
   	# Aela dies
-  	{LAST_BREATH_VARIATION2 Aela 
+  	{LAST_BREATH_VARIATION2 Aela true 
   		Aela ( _ "Who will… heal you now?") 
   		Hennak ( _ "No!")}
   	
   	# Hawk dies
-  	{LAST_BREATH_VARIATION2 Hawk 
+  	{LAST_BREATH_VARIATION2 Hawk false 
   		Hawk ( _ "That was a good… last hunt.") 
   		Hawk ( _ "Argh!")}
 #enddef
