changed campaign description

--- a/_main.cfg
+++ b/_main.cfg
@@ -47,7 +47,7 @@
 	
 	abbrev= _ "VoaS"
 	name= _ "Vision of a Shaman"
-	description= _ "Work in process. Starting this campaign will start VoaS: Chapter II until this Chapter is done."
+	description= _ "Work in process."
 	
 	difficulties=EASY,NORMAL,HARD
 	difficulty_descriptions={MENU_IMG_TXT2 "items/bones.png" (_"Story") _"(easy)"} +
