made C2S1 multiplayer playable. Alea is not a hero anymore, but a loyal unit of player two. Mahun is now the leader for player two.

--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -33,14 +33,24 @@
     id=Hennak
     gender=male
     name= _ "Hennak"
-    canrecruit=yes
-    unrenamable=yes
-    placement=map,leader
     [modifications]
         {TRAIT_STRONG}
         {TRAIT_RESILIENT}
         {TRAIT_LOYAL}
     [/modifications]
+#enddef
+
+#define CHARACTER_MAHUN
+	type=Thelian Shaman
+	gender=male
+	id=Mahun
+	name= _ "Mahun"
+	[modifications]
+        {TRAIT_INTELLIGENT}
+        {TRAIT_RESILIENT}
+        {TRAIT_LOYAL}
+    [/modifications]
+	{IS_HERO}
 #enddef
 
 #define CHARACTER_LUNA
@@ -57,34 +67,18 @@
 	{IS_LOYAL}
 #enddef
 
-#define CHARACTER_MAHUN
-	type=Thelian Shaman
-	gender=male
-	id=Mahun
-	name= _ "Mahun"
-	unrenamable=yes
-    placement=map,leader
-	[modifications]
-        {TRAIT_INTELLIGENT}
-        {TRAIT_RESILIENT}
-        {TRAIT_LOYAL}
-    [/modifications]
-	{IS_HERO}
-#enddef
-
 #define CHARACTER_AELA
     type=Thelian Herbalist
     gender=female
     id=Aela
     name= _ "Aela"
     unrenamable=yes
-    placement=map,leader
     [modifications]
         {TRAIT_RESILIENT}
         {TRAIT_QUICK}
         {TRAIT_LOYAL}
     [/modifications]
-    {IS_HERO}
+    {IS_LOYAL}
 #enddef
 
 #define CHARACTER_HAWK
