--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -24,12 +24,7 @@
   		Mahun ( _ "My time has come.")}
   	
   	# Aela dies
-  	{LAST_BREATH_VARIATION2 Aela true 
+  	{LAST_BREATH_VARIATION2 Aela false 
   		Aela ( _ "Who will… heal you now?") 
   		Hennak ( _ "No!")}
-  	
-  	# Hawk dies
-  	{LAST_BREATH_VARIATION2 Hawk false 
-  		Hawk ( _ "That was a good… last hunt.") 
-  		Hawk ( _ "Argh!")}
 #enddef
