character changes: removed third loyal trait from characters. Aela is a hero again.

--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -35,8 +35,7 @@
     name= _ "Hennak"
     [modifications]
         {TRAIT_STRONG}
-        {TRAIT_RESILIENT}
-        {TRAIT_LOYAL}
+        {TRAIT_QUICK}
     [/modifications]
 #enddef
 
@@ -48,7 +47,6 @@
 	[modifications]
         {TRAIT_INTELLIGENT}
         {TRAIT_RESILIENT}
-        {TRAIT_LOYAL}
     [/modifications]
 	{IS_HERO}
 #enddef
@@ -61,7 +59,6 @@
     unrenamable=yes
     [modifications]
         {TRAIT_FERAL_MUSTHAVE}
-        {TRAIT_STRONG}
         {TRAIT_LOYAL}
     [/modifications]
 	{IS_LOYAL}
@@ -76,24 +73,8 @@
     [modifications]
         {TRAIT_RESILIENT}
         {TRAIT_QUICK}
-        {TRAIT_LOYAL}
     [/modifications]
-    {IS_LOYAL}
-#enddef
-
-#define CHARACTER_HAWK
-    type=Thelian Hunter
-    id=Hawk
-    gender=male
-    name= _ "Hawk"
-    canrecruit=no
-    unrenamable=yes
-    [modifications]
-        {TRAIT_DEXTROUS}
-        {TRAIT_RESILIENT}
-        {TRAIT_LOYAL}
-    [/modifications]
-    {IS_LOYAL}
+    {IS_HERO}
 #enddef
 
 # V A M P I R E S
@@ -108,7 +89,6 @@
     [modifications]
         {TRAIT_VAMPIRE}
         {TRAIT_INTELLIGENT}
-        {TRAIT_LOYAL}
     [/modifications]
 #enddef
 
@@ -122,7 +102,6 @@
     [modifications]
         {TRAIT_VAMPIRE}
         {TRAIT_STRONG}
-        {TRAIT_LOYAL}
     [/modifications]
 #enddef
 
@@ -150,7 +129,6 @@
     [modifications]
         {TRAIT_STRONG}
         {TRAIT_RESILIENT}
-        {TRAIT_LOYAL}
     [/modifications]
     {IS_HERO}
 #enddef
@@ -173,6 +151,10 @@
     name= _ "Gwaba"
     canrecruit=yes
     unrenamable=yes
+    [modifications]
+    	{TRAIT_LOYAL}
+    	{TRAIT_QUICK}
+    [/modifications]
 #enddef
 
 #define CHARACTER_VROUL
@@ -183,7 +165,7 @@
 	[modifications]
     	{TRAIT_LOYAL}
     	{TRAIT_INTELLIGENT}
-    	[/modifications]
+    [/modifications]
     {IS_HERO}
 #enddef
 
@@ -218,6 +200,11 @@
     name= _ "Torok"
     canrecruit=no
     unrenamable=yes
+    [modifications]
+    	{TRAIT_LOYAL}
+    	{TRAIT_FEARLESS}
+    [/modifications]
+    {IS_LOYAL}
 #enddef
 
 #define CHARACTER_GRAUGH
