added Thalon to characters, renamed scenario 'silniel' into 'battle of sunhold'

--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -77,6 +77,15 @@
     {IS_HERO}
 #enddef
 
+#define CHARACTER_THALON
+    type=Thelian Ancestor
+    gender=male
+    id=Thalon
+    name= _ "Thalon"
+    unrenamable=yes
+    {IS_LOYAL}
+#enddef
+
 # V A M P I R E S
 
 #define CHARACTER_AGARWAEN_KNAVE
