deleting ptrl lua since we don't use 1.12 anymore

--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -2,29 +2,29 @@
 
 #define VOAS_I_LAST_BREATHS
 	# Agarwaen dies
-	{LAST_BREATH_VARIATION2 Agarwaen true 
+	{LAST_BREATH_VARIATION2 Agarwaen
   		Silwaen ( _ "Not my Brother! No!") 
   		Agarwaen ( _ "That is not possible ... I have been ... defeated.")}
 
 	# Agarwaen dies
-	{LAST_BREATH_VARIATION2 Silwaen true 
+	{LAST_BREATH_VARIATION2 Silwaen 
   		Agarwaen ( _ "... Brother!") 
   		Silwaen ( _ "Urgh ... damned! ...")}
 #enddef
 
 #define VOAS_II_LAST_BREATHS
 	# Hennak dies
-  	{LAST_BREATH_VARIATION2 Hennak true 
+  	{LAST_BREATH_VARIATION2 Hennak
   		Hennak ( _ "At least… I die in a fight.") 
   		Hennak ( _ "Ouch. The end of my life has been reached.")}
   	
   	# Mahun dies
-  	{LAST_BREATH_VARIATION2 Mahun true 
+  	{LAST_BREATH_VARIATION2 Mahun
   		Mahun ( _ "I will greet… our ancestrals.") 
   		Mahun ( _ "My time has come.")}
   	
   	# Aela dies
-  	{LAST_BREATH_VARIATION2 Aela false 
+  	{LAST_BREATH_VARIATION2 Aela
   		Aela ( _ "Who will… heal you now?") 
   		Hennak ( _ "No!")}
 #enddef
