--- a/utils/utils.cfg
+++ b/utils/utils.cfg
@@ -55,7 +55,7 @@
     [/unit]
 #enddef
 
-#define LAST_BREATH_VARIATION2 ID DEFEAT SPEAKER_1 STRING_1 SPEAKER_2 STRING_2
+#define LAST_BREATH_VARIATION2 ID SPEAKER_1 STRING_1 SPEAKER_2 STRING_2
     #
     #   Here is an example:
     #!  {LAST_BREATH_VARIATION2 Gweod false 
@@ -74,11 +74,6 @@
         [set_variable]
             name=last_breath_string
             rand=1,2
-        [/set_variable]
-
-        [set_variable]
-            name=is_hero
-            value={DEFEAT}
         [/set_variable]
         
         # FIRST STRING
@@ -108,21 +103,7 @@
                 [/message]
             [/then]
         [/if]
-        
-        # DEFEAT
-        [if]
-            [variable]
-                name=is_hero
-                boolean_equals=true
-            [/variable]
-            [then]
-                [endlevel]
-                    result=defeat
-                [/endlevel]
-            [/then]
-        [/if]
 
-        {CLEAR_VARIABLE is_hero}
         {CLEAR_VARIABLE last_breath_string}
     [/event]
 #enddef
@@ -150,24 +131,4 @@
     [delay]
         time={DELAY}
     [/delay]
-#enddef
-
-#define VOAS_PTRL_LUA
-[lua]
-code = <<
-function wesnoth.wml_actions.put_to_recall_list(cfg)
-   local units = wesnoth.get_units(cfg)
-   for i, unit in ipairs(units) do   
-      if cfg.heal then
-         unit.hitpoints = unit.max_hitpoints
-         unit.moves = unit.max_moves
-         unit.attacks_left = unit.max_attacks
-         unit.status.poisoned = false
-         unit.status.slowed = false
-      end
-      wesnoth.put_recall_unit(unit, unit.side)
-   end
-end
->>
-[/lua]
 #enddef
