generalized gold for players via marco, set Silniel back into the Battle of Lakeshore, changed gold reward for killing the enemy leaders in C2S5 from die to last breath event

--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -10,6 +10,22 @@
     user_team_name= _ "Enemy"
 #enddef
 
+#define VOAS_SP_GOLD
+    {GOLD 120 100 80}
+#enddef
+
+#define VOAS_MP_GOLD
+    {GOLD 60 50 40}
+#enddef
+
+#define VOAS_SP_MP_GOLD
+#ifdef MULTIPLAYER
+    {VOAS_MP_GOLD}
+#else
+    {VOAS_SP_GOLD}
+#endif
+#enddef
+
 #define PLAYABLE
     unrenamable=yes
     controller=human
