--- a/_main.cfg
+++ b/_main.cfg
@@ -43,12 +43,29 @@
 	
 	abbrev= _ "VoaS"
 	name= _ "Vision of a Shaman"
-	description= _ "Work in process."
+	description= _ "Work in process. Only Chapter II available!"
 	
-	difficulties=EASY,NORMAL,HARD
-	difficulty_descriptions={MENU_IMG_TXT2 "items/bones.png" (_"Story") _"(easy)"} +
-    ";*" + {MENU_IMG_TXT2 "items/burial.png" (_"Challenging") _"(normal)"} +
-    ";" + {MENU_IMG_TXT2 "items/bonestack.png" (_"Nightmare") _"(hard)"}
+	[difficulty]
+		define=EASY
+		image=items/bones.png
+		label= _ "Story"
+		description= _ "easy"
+	[/difficulty]
+
+	[difficulty]
+		define=NORMAL
+		image=items/burial.png
+		label= _ "Challenging"
+		description= _ "normal"
+		default=yes
+	[/difficulty]
+
+	[difficulty]
+		define=HARD
+		image=items/bonestack.png
+		label= _ "Nightmare"
+		description= _ "hard"
+	[/difficulty]
 
 	first_scenario=01_strangers
 	{VOAS_ABOUT}
@@ -69,8 +86,10 @@
 		{~add-ons/Vision_of_a_Shaman/units/orcs}
 		{~add-ons/Vision_of_a_Shaman/units/vampires}
 		{~add-ons/Vision_of_a_Shaman/units/human-thelians}
+#ifndef MULTIPLAYER
 		{~add-ons/Millenium_Era/units}
     	{~add-ons/Millenium_Era/units/wolves}
+#endif
 	[/units]
 
 	{~add-ons/Vision_of_a_Shaman/scenarios/chapter_01}
