commenting out descriptions from difficulties

--- a/_main.cfg
+++ b/_main.cfg
@@ -49,14 +49,14 @@
 		define=EASY
 		image=items/bones.png
 		label= _ "Story"
-		description= _ "easy"
+		# description= _ "easy"
 	[/difficulty]
 
 	[difficulty]
 		define=NORMAL
 		image=items/burial.png
 		label= _ "Challenging"
-		description= _ "normal"
+		# description= _ "normal"
 		default=yes
 	[/difficulty]
 
@@ -64,7 +64,7 @@
 		define=HARD
 		image=items/bonestack.png
 		label= _ "Nightmare"
-		description= _ "hard"
+		# description= _ "hard"
 	[/difficulty]
 
 	first_scenario=01_strangers
