make Mahun and Hennak recruit different units in singleplayer

--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -49,6 +49,7 @@
     gender=male
     name= _ "Hennak"
     canrecruit=yes
+    extra_recruit=Thelian Hunter, Thelian Warrior, Thelian Deer Rider
     [modifications]
         {TRAIT_STRONG}
         {TRAIT_QUICK}
@@ -61,6 +62,7 @@
 	id=Mahun
 	name= _ "Mahun"
     canrecruit=yes
+    extra_recruit=Thelian Hunter, Thelian Warrior, Thelian Feral
 	[modifications]
         {TRAIT_INTELLIGENT}
         {TRAIT_RESILIENT}
