--- a/utils/characters.cfg
+++ b/utils/characters.cfg
@@ -103,6 +103,7 @@
     gender=male
     name= _ "Agarwaen"
     canrecruit=yes
+    extra_recruit=Vamp Apprentice, Skeleton, Skeleton Archer
     [modifications]
         {TRAIT_VAMPIRE}
         {TRAIT_INTELLIGENT}
@@ -115,6 +116,7 @@
     gender=male
     name= _ "Silwaen"
     canrecruit=yes
+    extra_recruit=Vamp Fullblood, Vamp Thinblood, Vamp Blood Addict
     [modifications]
         {TRAIT_VAMPIRE}
         {TRAIT_STRONG}
@@ -183,6 +185,16 @@
 #enddef
 
 # H U M A N S
+
+#define CHARACTER_GINEVRA
+    type=Wesfolk Outcast
+    gender=female
+    id=Wesfolk Leader
+    name= _ "Wesfolk Leader"
+    profile="portraits/lady_outlaw.png"
+    canrecruit=yes
+    unrenamable=yes
+#enddef
 
 #define CHARACTER_GLUNWAN
     type=Swordsman
