graveyard summoning, yeah!

--- a/utils/utils.cfg
+++ b/utils/utils.cfg
@@ -204,3 +204,136 @@
         time={DELAY}
     [/delay]
 #enddef
+
+    # This menu item macro is used for "recruiting" walking corpses, skeletons, and skeleton
+    # archers from graves. UNIT is the unit type, UNIT_STRING is similar but has underscores
+    # and is used for the id and icon filename. GOLD is the cost (a number).
+#define SET_MENU_ITEM_FOR UNIT UNIT_STRING GOLD
+    # We need a variable to use in the switch statement:
+    [set_variable]
+        name=unit_string
+        value={UNIT_STRING}
+    [/set_variable]
+    # The following sentences could be built from the macro arguments, but that might
+    # make them impossible to translate properly. So, we use a switch statement instead.
+    [switch]
+        variable=unit_string
+        [case]
+            value=walking_corpse
+            [set_variable]
+                name=description_text
+                value= _ "Raise Walking Corpse (8 Gold)"
+            [/set_variable]
+        [/case]
+        [case]
+            value=skeleton
+            [set_variable]
+                name=description_text
+                value= _ "Raise Skeleton (15 Gold)"
+            [/set_variable]
+        [/case]
+        [case]
+            value=skeleton_archer
+            [set_variable]
+                name=description_text
+                value= _ "Raise Skeleton Archer (14 Gold)"
+            [/set_variable]
+        [/case]
+    [/switch]
+    [clear_variable]
+        name=unit_string
+    [/clear_variable]
+
+    [set_menu_item]
+        id=raise_{UNIT_STRING}
+        description=$description_text
+        image=units/icons/icon-{UNIT_STRING}.png
+
+        [show_if]
+            [and]
+                # Show if: This is a grave overlay terrain...
+                [have_location]
+                    terrain=*^Gryv
+                    x,y=$x1,$y1
+
+                    # ...within 1 hex of the leader...
+                    [and]
+                        [filter]
+                            id=Agarwaen
+                        [/filter]
+                        radius=1
+                    [/and]
+                [/have_location]
+
+                # ...And there is not a unit here already.
+                [not]
+                    [have_unit]
+                        x,y=$x1,$y1
+                    [/have_unit]
+                [/not]
+            [/and]
+        [/show_if]
+
+        [command]
+            [store_gold]
+                side=1
+                variable=gold
+            [/store_gold]
+
+            [if]
+                [variable]
+                    name=gold
+                    less_than={GOLD}
+                [/variable]
+                [then]
+                    [message]
+                        speaker=narrator
+                        image=items/gold-coins-message.png
+                        message=_ "You don't have enough gold to raise that unit."
+                    [/message]
+                [/then]
+                [else]
+                    [gold]
+                        side=1
+                        amount=-{GOLD}
+                    [/gold]
+                    # x1 and y1 have to be stored because they can be changed by the
+                    # player right-clicking again during this command:
+                    [set_variable]
+                        name=zombie_x
+                        value=$x1
+                    [/set_variable]
+                    [set_variable]
+                        name=zombie_y
+                        value=$y1
+                    [/set_variable]
+                    [item]  # Marks the grave as used.
+                        x,y=$zombie_x,$zombie_y
+                        image=items/dirt.png
+                    [/item]
+                    [delay]  # This makes it a bit animated.
+                        time=400
+                    [/delay]
+                    [unit]
+                        side=1
+                        x,y=$zombie_x,$zombie_y
+                        type={UNIT}
+                        animate=yes
+                        moves=0
+                        attacks_left=0
+                    [/unit]
+
+                    # Remove the overlay that defines this terrain as a grave:
+                    [terrain]
+                        terrain=''
+                        layer=overlay
+                        x,y=$zombie_x,$zombie_y
+                    [/terrain]
+                    [clear_variable]
+                        name=zombie_x,zombie_y
+                    [/clear_variable]
+                [/else]
+            [/if]
+        [/command]
+    [/set_menu_item]
+#enddef
