C1 tweaks. C1 and C2 are now all through playable!

--- a/_main.cfg
+++ b/_main.cfg
@@ -86,6 +86,7 @@
 		{~add-ons/Vision_of_a_Shaman/units/orcs}
 		{~add-ons/Vision_of_a_Shaman/units/vampires}
 		{~add-ons/Vision_of_a_Shaman/units/human-thelians}
+		{~add-ons/Vision_of_a_Shaman/units/human-outlaws}
 #ifndef MULTIPLAYER
 		{~add-ons/Millenium_Era/units}
     	{~add-ons/Millenium_Era/units/wolves}
