--- a/utils/utils.cfg
+++ b/utils/utils.cfg
@@ -127,6 +127,31 @@
     [/unit]
 #enddef
 
+#define PLAYER_TEAM
+    team_name=player
+    user_team_name= _ "Player"
+#enddef
+    
+#define ENEMY_TEAM
+    team_name=enemy
+    user_team_name= _ "Enemy"
+#enddef
+
+#define PLAYABLE
+    unrenamable=yes
+    controller=human
+    {PLAYER_TEAM}
+    persistent=yes
+    allow_player=yes
+#ifdef MULTIPLAYER
+    team_lock=yes
+    gold_lock=yes
+    income_lock=yes
+    faction=Custom
+    share_view=yes
+#endif
+#enddef
+
 #define LAST_BREATH_VARIATION2 ID SPEAKER_1 STRING_1 SPEAKER_2 STRING_2
     #
     #   Here is an example:
