fixed race thelians to thelian

--- a/units/human-thelians/1_Herbalist.cfg
+++ b/units/human-thelians/1_Herbalist.cfg
@@ -4,7 +4,7 @@
     id=Thelian Herbalist
     name= _ "female^Herbalist"
     gender=female
-    race=thelians
+    race=thelian
     image="units/human-thelians/herbalist.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=28
