--- a/units/human-thelians/2_Sorceress.cfg
+++ b/units/human-thelians/2_Sorceress.cfg
@@ -4,7 +4,7 @@
     id=Thelian Sorceress
     name= _ "female^Sorceress"
     gender=female
-    race=thelians
+    race=thelian
     image="units/human-thelians/sorceress.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=43
