--- a/units/human-thelians/3_Champion.cfg
+++ b/units/human-thelians/3_Champion.cfg
@@ -3,7 +3,7 @@
 [unit_type]
     id=Thelian Champion
     name= _ "Champion"
-    race=thelians
+    race=thelian
     image="units/human-thelians/champion.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=72
