--- a/units/human-thelians/3_Enchantress.cfg
+++ b/units/human-thelians/3_Enchantress.cfg
@@ -4,7 +4,7 @@
     id=Thelian Enchantress
     name= _ "female^Enchantress"
     gender=female
-    race=thelians
+    race=thelian
     image="units/human-thelians/enchantress.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=58
