--- a/units/human-thelians/1_Fighter.cfg
+++ b/units/human-thelians/1_Fighter.cfg
@@ -3,7 +3,7 @@
 [unit_type]
     id=Thelian Fighter
     name= _ "Fighter"
-    race=thelians
+    race=thelian
     image="units/human-thelians/fighter.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=36
