--- a/units/human-thelians/2_Hero.cfg
+++ b/units/human-thelians/2_Hero.cfg
@@ -3,7 +3,7 @@
 [unit_type]
     id=Thelian Hero
     name= _ "Hero"
-    race=thelians
+    race=thelian
     image="units/human-thelians/hero.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=58
