removed doubled characters

--- a/utils/characters_voas_1.cfg
+++ b/utils/characters_voas_1.cfg
@@ -31,7 +31,7 @@
 # H U M A N S
 
 #define CHARACTER_PERCIVAL
-    type=Peasant
+    type=Swordsman
     gender=male
     id=Percival
     name= _ "Percival"
