Make the VOAS_GOLD macro work properly. Start at 01_strangers for now.

--- a/utils/utils.cfg
+++ b/utils/utils.cfg
@@ -19,76 +19,50 @@
 #enddef
 #endif
 
-#define VOAS_SIDES E M H CHAR1_WML CHAR2_WML
+#define VOAS_GOLD EASY NORMAL HARD
+
+#ifdef MULTIPLAYER
+    {GOLD {EASY} {NORMAL} {HARD}}
+#else
+    {GOLD {EASY} {NORMAL} {HARD}}
+    [/side]
+
+    [event]
+        name=prestart
+        
+        [gold]
+            side=1
+            {QUANTITY amount {EASY} {NORMAL} {HARD}}
+        [/gold]
+    [/event]
+
+    [+side]
+#endif
+
+#enddef
+
+#define VOAS_SIDES_PLUS EASY NORMAL HARD CHAR1_WML CHAR1_SP_WML CHAR2_WML
+#ifndef MULTIPLAYER
+#endif
     [side]
         side=1
         {PLAYABLE}
-
+        {VOAS_GOLD {EASY} {NORMAL} {HARD}}
 #ifndef MULTIPLAYER
-        {VARIABLE e {E}}
-        {VARIABLE m {M}}
-        {VARIABLE h {H}}
-
-        {VARIABLE_OP e multiply 2}
-        {VARIABLE_OP m multiply 2}
-        {VARIABLE_OP h multiply 2}
-
-        
-        {GOLD $e $m $h}
-
-        {CLEAR_VARIABLE e}
-        {CLEAR_VARIABLE m}
-        {CLEAR_VARIABLE h}
-
-#else
-        {GOLD {E} {M} {H}}
+        {CHAR1_SP_WML}
 #endif
-
         {CHAR1_WML}
     [/side]
 
     {MP_SIDE 2 (
         {PLAYABLE}
-        {GOLD {E} {M} {H}}
+        {GOLD {EASY} {NORMAL} {HARD}}
         {CHAR2_WML}
     )}
 #enddef
 
-#define VOAS_SIDES_PLUS E M H CHAR1_WML CHAR1_SP_WML CHAR2_WML
-    [side]
-        side=1
-        {PLAYABLE}
-
-#ifndef MULTIPLAYER
-        {VARIABLE e {E}}
-        {VARIABLE m {M}}
-        {VARIABLE h {H}}
-
-        {VARIABLE_OP e multiply 2}
-        {VARIABLE_OP m multiply 2}
-        {VARIABLE_OP h multiply 2}
-
-        
-        {GOLD $e $m $h}
-
-        {CLEAR_VARIABLE e}
-        {CLEAR_VARIABLE m}
-        {CLEAR_VARIABLE h}
-
-        {CHAR1_SP_WML}
-
-#else
-        {GOLD {E} {M} {H}}
-#endif
-
-        {CHAR1_WML}
-    [/side]
-
-    {MP_SIDE 2 (
-        {PLAYABLE}
-        {GOLD {E} {M} {H}}
-        {CHAR2_WML}
-    )}
+#define VOAS_SIDES EASY NORMAL HARD CHAR1_WML CHAR2_WML
+    {VOAS_SIDES_PLUS {EASY} {NORMAL} {HARD} {CHAR1_WML} ( ) {CHAR2_WML}}
 #enddef
 
 #define RECALL_LOYALS
