Shadows of the Mountains: New Arcane Bow to discover & small map changes

--- a/utils/utils.cfg
+++ b/utils/utils.cfg
@@ -336,3 +336,106 @@
         [/command]
     [/set_menu_item]
 #enddef
+
+#define OBJ_BOW_ARCANE X Y ID
+
+    [event]
+        name=moveto
+
+        [filter]
+            side=1
+            x={X}
+            y={Y}
+        [/filter]
+
+        [message]
+            speaker=narrator
+            image="wesnoth-icon.png"
+            message= _ "A shiny bow is placed in the middle of the elvish castle hall."
+        [/message]
+        {PLACE_IMAGE items/elvish-bow.png ({X}) ({Y})}
+        {VARIABLE bow_taken 0}
+        [event]
+            name=victory
+            {CLEAR_VARIABLE bow_taken}
+        [/event]
+    [/event]
+    
+    [event]
+        name=moveto
+        first_time_only=no
+        [filter]
+            side=1
+            x={X}
+            y={Y}
+        [/filter]
+        [if]
+            [variable]
+                name=bow_taken
+                numerical_equals=0
+            [/variable]
+            [then]
+                [message]
+                    speaker=narrator
+                    image="wesnoth-icon.png"
+                    message= _ "Should $unit.name| attempt to pick up the bow?"
+                    [option]
+                        label= _ "Yes"
+                        [command]
+                            [object]
+                                id={ID}
+                                name= _ "Arcane Bow"
+                                image=attacks/bow-elven-magic.png
+                                duration=forever
+                                # wmllint: local spelling forgemasters
+                                # description= _ ""
+                                cannot_use_message= _ "Only a true archer can hold this bow"
+                                [filter]
+                                    type=Thelian Hunter, Thelian Deerstalker, Thelian Nimrod
+                                    x,y={X},{Y}
+                                [/filter]
+                                [then]
+                                    [remove_item]
+                                        x,y={X},{Y}
+                                    [/remove_item]
+                                    [message]
+                                        speaker=$unit.id|
+                                        image="wesnoth-icon.png"
+                                        caption=""
+                                        message= _ "As $unit.name| takes the bow."
+                                    [/message]
+                                    {VARIABLE bow_taken 1}
+                                [/then]
+                                [effect]
+                                    apply_to=attack
+                                    name=bow
+                                    set_description= _ "arcane bow"
+                                    set_icon=attacks/bow-elven-magic.png
+                                    set_type=arcane
+                                    [set_specials]
+                                        {WEAPON_SPECIAL_MAGICAL}
+                                    [/set_specials]
+                                    increase_damage=25%
+                                [/effect]
+                            [/object]
+                        [/command]
+                    [/option]
+
+                    [option]
+                        label= _ "No"
+
+                        [command]
+                            [allow_undo]
+                            [/allow_undo]
+                        [/command]
+                    [/option]
+                [/message]
+            [/then]
+
+            [else]
+                [allow_undo]
+                [/allow_undo]
+            [/else]
+        [/if]
+    [/event]
+#enddef
