some fixed due to renaming vampire units

--- a/units/vampires/1_Knave.cfg
+++ b/units/vampires/1_Knave.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-voas
 [unit_type]
-    id=Vamp Knave
+    id=Vampire Knave
     name= _ "Knave"
     race=vampires
     image="units/vampires/knave.png"
@@ -11,7 +11,7 @@
     experience=54
     level=1
     alignment=chaotic
-    advances_to=Vamp Villain
+    advances_to=Vampire Villain
     cost=20
     usage=mixed fighter
     die_sound={SOUND_LIST:HUMAN_DIE}
