--- a/units/vampires/4_Nosferatu.cfg
+++ b/units/vampires/4_Nosferatu.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-voas
 [unit_type]
-    id=Vamp Nosferatu
+    id=Vampire Nosferatu
     name= _ "Nosferatu"
     race=vampires
     image="units/vampires/nosferatu.png"
