--- a/utils/characters_voas_1.cfg
+++ b/utils/characters_voas_1.cfg
@@ -3,25 +3,25 @@
 # V A M P I R E S
 
 #define CHARACTER_AGARWAEN_KNAVE
-    type=Vamp Knave
+    type=Vampire Knave
     id=Agarwaen
     gender=male
     name= _ "Agarwaen"
     canrecruit=yes
-    extra_recruit=Vamp Apprentice, Skeleton, Skeleton Archer
+    extra_recruit=Vampire Apprentice, Skeleton, Skeleton Archer
     [modifications]
         {TRAIT_VAMPIRE}
         {TRAIT_INTELLIGENT}
     [/modifications]
 #enddef
 
-#define CHARACTER_SILWAEN_FULLBLOOD
-    type=Vamp Fullblood
-    id=Silwaen
+#define CHARACTER_SILVAEN_FIGHTER
+    type=Vampire Fighter
+    id=Silvaen
     gender=male
-    name= _ "Silwaen"
+    name= _ "Silvaen"
     canrecruit=yes
-    extra_recruit=Vamp Fullblood, Vamp Thinblood, Vamp Blood Addict
+    extra_recruit=Vampire Fighter, Vampire Bitten
     [modifications]
         {TRAIT_VAMPIRE}
         {TRAIT_STRONG}
