--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -3,13 +3,13 @@
 #define VOAS_I_LAST_BREATHS
 	# Agarwaen dies
 	{LAST_BREATH_VARIATION2 Agarwaen
-  		Silwaen ( _ "Not my Brother! No!") 
+  		Silvaen ( _ "Not my Brother! No!") 
   		Agarwaen ( _ "That is not possible ... I have been ... defeated.")}
 
 	# Agarwaen dies
-	{LAST_BREATH_VARIATION2 Silwaen 
+	{LAST_BREATH_VARIATION2 Silvaen 
   		Agarwaen ( _ "... Brother!") 
-  		Silwaen ( _ "Urgh ... damned! ...")}
+  		Silvaen ( _ "Urgh ... damned! ...")}
 #enddef
 
 #define VOAS_II_LAST_BREATHS
