--- a/units/vampires/2_Villain.cfg
+++ b/units/vampires/2_Villain.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-voas
 [unit_type]
-    id=Vamp Villain
+    id=Vampire Villain
     name= _ "Villain"
     race=vampires
     image="units/vampires/villain.png"
@@ -11,7 +11,7 @@
     experience=100
     level=2
     alignment=chaotic
-    advances_to=Vamp Emperor
+    advances_to=Vampire Emperor
     cost=40
     usage=mixed fighter
     die_sound={SOUND_LIST:HUMAN_DIE}
