--- a/units/vampires/3_Emperor.cfg
+++ b/units/vampires/3_Emperor.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-voas
 [unit_type]
-    id=Vamp Emperor
+    id=Vampire Emperor
     name= _ "Emperor"
     race=vampires
     image="units/vampires/emperor.png"
@@ -11,7 +11,7 @@
     experience=180
     level=3
     alignment=chaotic
-    advances_to=Vamp Nosferatu
+    advances_to=Vampire Nosferatu
     cost=54
     usage=mixed fighter
     die_sound={SOUND_LIST:HUMAN_DIE}
