commented unused directories out

--- a/_main.cfg
+++ b/_main.cfg
@@ -96,6 +96,6 @@
 	{~add-ons/Vision_of_a_Shaman/scenarios/chapter_01}
 	{~add-ons/Vision_of_a_Shaman/scenarios/chapter_02}
 	{~add-ons/Vision_of_a_Shaman/scenarios/chapter_03}
-	{~add-ons/Vision_of_a_Shaman/scenarios/chapter_04}
-	{~add-ons/Vision_of_a_Shaman/scenarios/chapter_05}
+	# {~add-ons/Vision_of_a_Shaman/scenarios/chapter_04}
+	# {~add-ons/Vision_of_a_Shaman/scenarios/chapter_05}
 #endif
