some more positioning fixes caused by the player change

--- a/_main.cfg
+++ b/_main.cfg
@@ -1,7 +1,7 @@
 #textdomain wesnoth-voas
 
 [textdomain]
-	name="wesnoth"
+	name="wesnoth-voas"
 	path="data/add-ons/Vision_of_a_Shaman/translations"
 [/textdomain]
 
@@ -67,7 +67,7 @@
 		# description= _ "hard"
 	[/difficulty]
 
-	first_scenario=00_proloque
+	first_scenario=01_strangers
 	{VOAS_ABOUT}
 [/campaign]
 
