--- a/utils/characters_voas_2.cfg
+++ b/utils/characters_voas_2.cfg
@@ -77,7 +77,7 @@
 	unrenamable=yes
 	[modifications]
 		{TRAIT_STRONG}
-		{TRAIT_RESILIENT}
+		{TRAIT_LOYAL}
 	[/modifications]
 	{IS_HERO}
 #enddef
