ranked VoaS with 120 as a campaign more for intermediate players and added start and end year for chronological sorting

--- a/_main.cfg
+++ b/_main.cfg
@@ -30,7 +30,11 @@
 [campaign]
 	id=Vision_of_a_Shaman
 	define=CAMPAIGN_VISION_OF_A_SHAMAN
-
+	
+	rank=120
+    start_year="865 YW"
+	end_year="895 YW"
+	
 	type=hybrid
 
 	min_players=2
