--- a/_main.cfg
+++ b/_main.cfg
@@ -47,7 +47,7 @@
 	
 	abbrev= _ "VoaS"
 	name= _ "Vision of a Shaman"
-	description= _ "Work in process. Only Chapter II available!"
+	description= _ "Work in process. Only Chapter I & II available!"
 	
 	[difficulty]
 		define=EASY
