shaman as icon for campaign

--- a/_main.cfg
+++ b/_main.cfg
@@ -42,7 +42,7 @@
 
 	allow_era_choice=no
 
-	icon="items/book1.png"
+	icon="units/human-thelians/shaman.png"
 	image="data/add-ons/Vision_of_a_Shaman/images/portraits/orcish_shaman.png"
 	
 	abbrev= _ "VoaS"
